<resources>
    <string name="app_name">Cadastro</string>
    <string name="labelName">Nome Completo</string>
    <string name="labelPhone">Telefone</string>
    <string name="labelEmail">E-mail</string>
    <string name="labelEmailList">Ingressar na lista de e-mails?</string>
    <string name="labelSex">Sexo</string>
    <string name="labelCity">Cidade</string>
    <string name="labelUf">UF</string>
    <string name="saveButton">Salvar</string>
    <string name="cleanButton">Limpar</string>
    <string-array name="uf_array">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Parana</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>