<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="8dp">
    
    <TextView
        android:id="@+id/nameLabel"
        android:text="@string/labelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/nameInp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phoneLabel"
        android:text="@string/labelPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameInp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/phoneInp"
        android:hint="Ex: 12-93456-7890"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/emailLabel"
        android:text="@string/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneInp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/emailInp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/emailListChk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEmailList"
        app:layout_constraintTop_toBottomOf="@id/emailInp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sexLabel"
        android:text="@string/labelSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailListChk"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/sexRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sexLabel"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/sexRadioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/sexRadioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexRadioGroup"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/cityInp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cityLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/ufLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelUf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityInp"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:id="@+id/ufSpin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ufLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:entries="@array/uf_array"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ufSpin"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cleanButton"
            android:layout_weight="1"
            android:layout_marginRight="4dp"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveButton"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>